--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ margin-top:-30px;
 
 
     <div class="globe">
-        g
+        
     </div>
      <img src="lo.png" alt="" style="margin-top: -800px; " id="navbarbig">
       
@@ -180,14 +180,14 @@ margin-top:-30px;
         Meet Raily where you can</h2>
 
     <div class="col-md-3 col-sm" id="connect">
-        <img src="fi/f2.webp" alt="" width="200px" height="370px" style="margin-left: 50px;" class="slide-up1">
+        <img src="fi/f2.webp" alt="" class="slide-up" width="200px" height="370px" style="margin-left: 50px;" class="slide-up1">
         <br>
         <h3 style="color:white; text-align: center; ">Connect</h3>
         <p style="color:#ffffff99; margin-left: 40px;">Meet interesting people anywhere with our AI matchmaker.</p>
     </div>
 
     <div class="col-md-3 col-sm">
-        <img src="fi/f3.webp" alt="" width="200px" height="370px" style="margin-left: 50px;" class="slide-up1">
+        <img src="fi/f3.webp" alt="" class="slide-up" width="200px" height="370px" style="margin-left: 50px;" class="slide-up1">
         <br>
         <h3 style="color:white; text-align: center; ">Discover</h3>
         <p style="color:#ffffff99; margin-left: 40px;">
@@ -195,7 +195,7 @@ margin-top:-30px;
     </div>
 
     <div class="col-md-3 col-sm">
-        <img src="fi/f4.webp" alt="" width="200px" height="370px" style="margin-left: 30px;" class="slide-up">
+        <img src="fi/f4.webp" alt="" class="slide-up" width="200px" height="370px" style="margin-left: 30px;" class="slide-up">
         <br>
         <h3 style="color:white; padding-left:90px;">Bond</h3>
         <p style="color:#ffffff99; margin-left: 40px;">
@@ -203,7 +203,7 @@ margin-top:-30px;
     </div>
 
     <div class="col-md-3 col-sm">
-        <img src="fi/f5.webp" alt="" width="200px" height="370px" class="slide-up">
+        <img src="fi/f5.webp" alt="" class="slide-up" width="200px" height="370px" class="slide-up">
         <br>
         <h3 style="color:white; padding-left:60px; ">Explore</h3>
         <p style="color:#ffffff99; ">
